Notice and fix flickering bug with span on build features items

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1041,6 +1041,7 @@ body {
   .build-features__item {
     align-items: center;
     max-width: 100%;
+    width: 40%;
   }
 
   .feature {
